--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,4 +36,5 @@ jobs:
         git add -A
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
+        git pull --rebase origin main
         git push
